--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <h1>Become a <span class="text-warning">Web Developer</span></h1>
                     <p class="lead my-4">We focus on teaching our students the fundamentals of the latest and greatest
                         technologies to prepare them for their first dev role</p>
-                    <button class="btn btn-primary btn-lg">Start here</button>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start
+                        here</button>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block"
                     src="https://www.frontendbootcampdemo.com/img/showcase.svg" alt="">
@@ -279,12 +280,14 @@
                             <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/men/91.jpg"
                                 alt="">
                             <h3 class="card-title mb-3">John Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente,
+                                mollitia aperiam laborum consectetur architecto commodi.</p>
                             <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
-                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
-                    </div>                    
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
@@ -292,12 +295,14 @@
                             <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/women/91.jpg"
                                 alt="">
                             <h3 class="card-title mb-3">Jane Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente,
+                                mollitia aperiam laborum consectetur architecto commodi.</p>
                             <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
-                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
-                    </div>                    
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
@@ -305,12 +310,14 @@
                             <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/men/76.jpg"
                                 alt="">
                             <h3 class="card-title mb-3">Josh Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente,
+                                mollitia aperiam laborum consectetur architecto commodi.</p>
                             <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
-                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
-                    </div>                    
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="card bg-light">
@@ -318,12 +325,14 @@
                             <img class="rounded-circle mb-3" src="https://randomuser.me/api/portraits/women/81.jpg"
                                 alt="">
                             <h3 class="card-title mb-3">Josaleen Doe</h3>
-                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, mollitia aperiam laborum consectetur architecto commodi.</p>
+                            <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente,
+                                mollitia aperiam laborum consectetur architecto commodi.</p>
                             <a href=""><i class="bi bi-twitter text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-instagram text-dark p-1"></i></a>
                             <a href=""><i class="bi bi-linkedin text-dark p-1"></i></a>
-                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>                       </div>
-                    </div>                    
+                            <a href=""><i class="bi bi-facebook text-dark p-1"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -344,10 +353,12 @@
                     <p><b>Enrollment Email:</b>enroll@frontendbc.test</p>
                     <hr>
                     <p><b>Student Email:</b>student@frontendbc.test</p>
-                    
+
                 </div>
                 <div class="col-md">
-                    <iframe class="rounded-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.5591568865666!2d-71.06448938454328!3d42.37323347918603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370ed678c5c7b%3A0x1151236a3eb3c8e2!2zNTAgTWFpbiBTdCwgQ2hhcmxlc3Rvd24sIE1BIDAyMTI5LCDQodCo0JA!5e0!3m2!1sru!2sua!4v1632225423129!5m2!1sru!2sua" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe class="rounded-3"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.5591568865666!2d-71.06448938454328!3d42.37323347918603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370ed678c5c7b%3A0x1151236a3eb3c8e2!2zNTAgTWFpbiBTdCwgQ2hhcmxlc3Rvd24sIE1BIDAyMTI5LCDQodCo0JA!5e0!3m2!1sru!2sua!4v1632225423129!5m2!1sru!2sua"
+                        width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -362,6 +373,52 @@
             </a>
         </div>
     </footer>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="enroll">Enrollment</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">Fill out this form and we will get back to you</p>
+                    <form>
+                        <div class="mb-3">
+                            <label for="first-name" class="col-form-label">
+                                First Name:
+                            </label>
+                            <input class="form-control" id="first-name" type="text">
+                        </div>
+                        <div class="mb-3">
+                            <label for="last-name" class="col-form-label">
+                                Last Name:
+                            </label>
+                            <input class="form-control" id="last-name" type="text">
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="col-form-label">
+                                Email:
+                            </label>
+                            <input class="form-control" id="email" type="text">
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="col-form-label">
+                                Phone:
+                            </label>
+                            <input class="form-control" id="phone" type="text">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquewry.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
